[FIX] annotation's cell

--- a/Esercizio 2/mapping_FN_WN.ipynb
+++ b/Esercizio 2/mapping_FN_WN.ipynb
@@ -30,29 +30,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "definizione frame: A speaker marks a Conceded_state_of_affairs as being or implying a contradiction to the Main_assertion.  Some LUs specify the Main_assertion, others the Conceded_state_of_affairs, as referring to the preceding discourse (i.e. DNI), while yet others are conjunctions joining the two.  'Although she had some trouble , she was able to finish about two hours early .' 'Nevertheless , we did win . DNI ' 'I wanted to come , but I did n't remember where the party was . '\n",
+      "\n",
+      "\n",
+      "Conceded_state_of_affairs :  A proposition or set of propositions that the speaker wants the addressee to believe or take for granted. This statement is not asserted, but presupposed by the speaker of the sentence, and is mentioned to contrast with the Main_assertion. It would or could seem to predict a situation different than the Main_assertion, but, for reasons left implicit, this normal prediction is contradicted by the fact that the Main_assertion and the Conceded_state_of_affairs are both simultaneously true. \n",
+      "Topic :  An entity which metonymically stands in for an associated Statement.  'She got married in spite of him .' 'Despite her , they finished on time .'\n",
+      "Main_assertion :  The statement that the speaker wishes to assert or offer as their main contribution to the discourse, which is be modified or hedged in some way by the Conceded_state_of_affairs. The force of the contribution of the Main_assertion is presented as undiluted by the fact that something different from the Main_assertion would normally by predicted, based on the facts in the Conceded_state_of_affairs. \n",
+      "\n",
+      "\n",
+      "despite.prep :  FN: in spite of\n",
+      "in spite of.prep :  FN: in spite of \n",
+      "though.scon :  in spite of the fact that\n",
+      "although.scon :  FN: in spite of the fact that\n",
+      "while.scon :  when on the other hand\n",
+      "if.scon :  FN: with the assumption that there is a possibility that\n",
+      "much as.scon :  FN: (usually with verbs of cognition or volition, esp. \"much as I'd like...\") although.\n"
+     ]
+    }
+   ],
    "source": [
-    "frame = fn.frame_by_name(\"Deciding\")\n",
+    "from nltk.corpus import framenet as fn\n",
+    "from nltk.corpus import wordnet as wn\n",
     "\n",
+    "frame = fn.frame_by_name(\"Concessive\")\n",
     "\n",
     "print('definizione frame:', frame.definition)\n",
     "print('\\n')\n",
     "\n",
-    "for fe in deciding_frame.FE:\n",
+    "for fe in frame.FE:\n",
     "    print(fe, ': ', frame.FE[fe].definition)\n",
     "\n",
     "print('\\n')\n",
-    "for lu in deciding_frame.lexUnit:\n",
+    "for lu in frame.lexUnit:\n",
     "    print(lu, ': ', frame.lexUnit[lu].definition)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Synset('preclude.v.02')\n",
+      "definition: make impossible, especially beforehand\n",
+      "\n",
+      "\n",
+      "Synset('rule_out.v.02')\n",
+      "definition: include or exclude by determining judicially or in agreement with rules\n",
+      "\n",
+      "\n",
+      "Synset('rule_out.v.03')\n",
+      "definition: dismiss from consideration or a contest\n",
+      "John was ruled out as a possible suspect because he had a strong alibi\n",
+      "This possibility can be eliminated from our consideration\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\n')\n",
     "for syn in wn.synsets('rule_out'):\n",
