[ADD] annotations, OP

--- a/Esercizio 2/mapping_FN_WN.ipynb
+++ b/Esercizio 2/mapping_FN_WN.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Frame TOMATIS\n",
     "[x] Deciding\n",
-    "[ ] Intentionally_act\n",
+    "[x] Intentionally_act\n",
     "[x] Competition\n",
     "[x] Fairness_evaluation\n",
     "[x] Process_continue"
@@ -30,50 +30,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "definizione frame: This is an abstract frame for acts performed by sentient beings. It exists mostly for FE inheritance.  'I carried out the deed easily .'\n",
+      "definizione frame: A speaker marks a Conceded_state_of_affairs as being or implying a contradiction to the Main_assertion.  Some LUs specify the Main_assertion, others the Conceded_state_of_affairs, as referring to the preceding discourse (i.e. DNI), while yet others are conjunctions joining the two.  'Although she had some trouble , she was able to finish about two hours early .' 'Nevertheless , we did win . DNI ' 'I wanted to come , but I did n't remember where the party was . '\n",
       "\n",
       "\n",
-      "Act :  This FE identifies the Act that the Agent performs intentionally.\n",
-      "Agent :  The Agent performs the intentional act.  'We have not yet acted .'\n",
-      "Place :  This FE identifies the place where the intentional act occurs.\n",
-      "Purpose :  This FE identifies the purpose for which an Agent performs an intentional act. John flattered her to receive a raise.\n",
-      "Time :  This FE identifies the time when the Agent acts intentionally.\n",
-      "Means :  This FE identifies the Means by which an Agent acts intentionally.\n",
-      "Manner :  Any description of the intentional act which is not covered by more specific FEs, including secondary effects (quietly, loudly), and general descriptions comparing events (the same way). In addition, it may indicate salient characteristics of an Agent that also affect the action (presumptuously, coldly, deliberately, eagerly, carefully).  ''Twould be best it were done quietly.' \n",
-      "Domain :  The Domain within which the Agent acts.  'No doubt he has begun to engage in political activity of late'\n",
-      "Frequency :  The Frequency with which the Agent does the Act in a given period of time.\n",
-      "Period_of_iterations :  The length of time from when the event denoted by the target began to be repeated to when it stopped.\n",
-      "Result :  The Result of an act. \n",
-      "Particular_iteration :  Expressions marked with this extra-thematic FE modify a non-iterative use of the target, and indicate that it is conceived as embedded within an iterated series of similar events or states.\n",
-      "Explanation :  The Explanation denotes a proposition from which the main clause (headed by the target) logically follows. This often means that the Explanation causes the state of affairs expressed by the target, but not in all cases. \n",
-      "Event_description :  This FE gives a description of the Intentionally_act event.\n",
-      "Apparent_conclusion :  This FE describes an additional situation or modification that would seem to hold given the rest of the situation. In some cases, it marks a completely separate conclusion than one would draw from the manner of the event in the main clause.  As far as we know, this idea is only explicitly marked in English with \"as if\".  'We have to do our duty as if it matters .'  Usually, the Apparent_conclusion contains another FE, either peripheral or extra-thematic, which is non-factive (i.e., it may, but does not necessarily, hold). For these cases, we annotate the other frame-element on the second layer; thus the following should be annotated with Purpose on the second layer.   'As if to guarantee failure , they conducted the study without consulting experts .' 'As if to guarantee failure , they conducted the study without consulting experts .'  We do not annotate this FE in cases where we merely infer that a part of the sentence is meant sarcastically, as in the following minimal modification of the above sentence:  'To guarantee failure , they conducted the study without consulting experts .'  In this case, we simply annotate the Purpose FE.\n",
+      "frame element (13302): Conceded_state_of_affairs\n",
+      "    of Concessive(2150)\n",
+      "[definition]\n",
+      "  A proposition or set of propositions that the speaker wants the\n",
+      "  addressee to believe or take for granted. This statement is not\n",
+      "  asserted, but presupposed by the speaker of the sentence, and is\n",
+      "  mentioned to contrast with the Main_assertion. It would or could\n",
+      "  seem to predict a situation different than the Main_assertion,\n",
+      "  but, for reasons left implicit, this normal prediction is\n",
+      "  contradicted by the fact that the Main_assertion and the\n",
+      "  Conceded_state_of_affairs are both simultaneously true.\n",
+      "[abbrev] Msg\n",
+      "[coreType] Core\n",
+      "[requiresFE] <None>\n",
+      "[excludesFE] <None>\n",
+      "[semType] \n",
+      "  Message(56)\n",
+      "\n",
+      "Conceded_state_of_affairs :  A proposition or set of propositions that the speaker wants the addressee to believe or take for granted. This statement is not asserted, but presupposed by the speaker of the sentence, and is mentioned to contrast with the Main_assertion. It would or could seem to predict a situation different than the Main_assertion, but, for reasons left implicit, this normal prediction is contradicted by the fact that the Main_assertion and the Conceded_state_of_affairs are both simultaneously true. \n",
+      "frame element (13303): Topic\n",
+      "    of Concessive(2150)\n",
+      "[definition]\n",
+      "  An entity which metonymically stands in for an associated\n",
+      "  Statement.  'She got married in spite of him .' 'Despite her ,\n",
+      "  they finished on time .'\n",
+      "[abbrev] Top\n",
+      "[coreType] Core\n",
+      "[requiresFE] <None>\n",
+      "[excludesFE] Conceded_state_of_affairs(13302)\n",
+      "[semType] <None>\n",
+      "\n",
+      "Topic :  An entity which metonymically stands in for an associated Statement.  'She got married in spite of him .' 'Despite her , they finished on time .'\n",
+      "frame element (13312): Main_assertion\n",
+      "    of Concessive(2150)\n",
+      "[definition]\n",
+      "  The statement that the speaker wishes to assert or offer as their\n",
+      "  main contribution to the discourse, which is be modified or\n",
+      "  hedged in some way by the Conceded_state_of_affairs. The force of\n",
+      "  the contribution of the Main_assertion is presented as undiluted\n",
+      "  by the fact that something different from the Main_assertion\n",
+      "  would normally by predicted, based on the facts in the\n",
+      "  Conceded_state_of_affairs.\n",
+      "[abbrev] \n",
+      "[coreType] Core\n",
+      "[requiresFE] <None>\n",
+      "[excludesFE] <None>\n",
+      "[semType] <None>\n",
+      "\n",
+      "Main_assertion :  The statement that the speaker wishes to assert or offer as their main contribution to the discourse, which is be modified or hedged in some way by the Conceded_state_of_affairs. The force of the contribution of the Main_assertion is presented as undiluted by the fact that something different from the Main_assertion would normally by predicted, based on the facts in the Conceded_state_of_affairs. \n",
       "\n",
       "\n",
-      "action.n :  COD: a thing done.\n",
-      "do.v :  COD:  perform or carry out (an action).\n",
-      "step.n :  COD: a measure or action, especially one of a series taken in order to deal with or achieve a particular thing.\n",
-      "act.v :  COD: take action; do something FN: [Usage: normally used only when the Act is implied.]\n",
-      "doing.n :  FN: activities \n",
-      "activity.n :  COD: an action taken in pursuit of an objective\n",
-      "perform.v :  COD: carry out, accomplish, or fulfil (an action, task, or function).\n",
-      "carry out.v :  COD: perform (a task or planned operation).\n",
-      "conduct.v :  COD: organize and carry out.\n",
-      "execute.v :  COD: carry out or put into effect (a plan, order, etc.).\n",
-      "engage.v :  COD:  participate or become involved in.\n",
-      "measures.n :  COD: a means of achieving a purpose\n",
-      "act.n :  COD: a thing done.\n",
-      "move.n :  FN: an act embedded with strategy\n",
-      "actor.n :  FN: the person deliberately involved in an event or activity\n",
-      "agent.n :  FN: A person who acts of his own volition\n",
-      "deed.n :  FN: an intentional action\n"
+      "despite.prep :  FN: in spite of\n",
+      "in spite of.prep :  FN: in spite of \n",
+      "though.scon :  in spite of the fact that\n",
+      "although.scon :  FN: in spite of the fact that\n",
+      "while.scon :  when on the other hand\n",
+      "if.scon :  FN: with the assumption that there is a possibility that\n",
+      "much as.scon :  FN: (usually with verbs of cognition or volition, esp. \"much as I'd like...\") although.\n"
      ]
     }
    ],
@@ -81,7 +105,7 @@
     "from nltk.corpus import framenet as fn\n",
     "from nltk.corpus import wordnet as wn\n",
     "\n",
-    "frame = fn.frame_by_name('Intentionally_act')\n",
+    "frame = fn.frame_by_name('Concessive')\n",
     "\n",
     "print('definizione frame:', frame.definition)\n",
     "print('\\n')\n",
@@ -93,6 +117,26 @@
     "for lu in frame.lexUnit:\n",
     "    print(lu, ': ', frame.lexUnit[lu].definition)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "lexical unit (256): foresee.v\n\n[definition]\n  COD: be aware of beforehand; predict.\n\n[frame] Expectation(26)\n\n[POS] V\n\n[status] FN1_Sent\n\n[lexemes] foresee/V\n\n[semTypes] 0 semantic types\n\n[URL] https://framenet2.icsi.berkeley.edu/fnReports/data/lu/lu256.xml\n\n[subCorpus] 25 subcorpora\n  V-420-that-sfin, V-430-sfin, V-480-swh, V-570-np-ppfor,\n  V-570-np-ppfrom, V-570-np-ppin, V-570-np-ppon, V-570-np-\n  ppwith, V-620-np-ppother, V-650-np-pother, V-660-trans-\n  simple, V-670-pass-by, V-680-pass, V-690-trans-other,\n  V-730-ppat, V-730-ppfor, V-730-ppfrom, V-730-ppin,\n  V-730-ppon, V-730-ppwith, V-780-ppother, V-810-pother,\n  V-890-intrans-adverb, V-900-other, manually-added\n\n[exemplars] 45 sentences across all subcorpora"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn.lu(256)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
