--- a/Esercizio 2/mapping_FN_WN.ipynb
+++ b/Esercizio 2/mapping_FN_WN.ipynb
@@ -30,74 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "definizione frame: A speaker marks a Conceded_state_of_affairs as being or implying a contradiction to the Main_assertion.  Some LUs specify the Main_assertion, others the Conceded_state_of_affairs, as referring to the preceding discourse (i.e. DNI), while yet others are conjunctions joining the two.  'Although she had some trouble , she was able to finish about two hours early .' 'Nevertheless , we did win . DNI ' 'I wanted to come , but I did n't remember where the party was . '\n",
+      "definizione frame: A recordable sequence of events is associated with a given Topic.   'And that is where the history of art begins.' \n",
       "\n",
       "\n",
-      "frame element (13302): Conceded_state_of_affairs\n",
-      "    of Concessive(2150)\n",
-      "[definition]\n",
-      "  A proposition or set of propositions that the speaker wants the\n",
-      "  addressee to believe or take for granted. This statement is not\n",
-      "  asserted, but presupposed by the speaker of the sentence, and is\n",
-      "  mentioned to contrast with the Main_assertion. It would or could\n",
-      "  seem to predict a situation different than the Main_assertion,\n",
-      "  but, for reasons left implicit, this normal prediction is\n",
-      "  contradicted by the fact that the Main_assertion and the\n",
-      "  Conceded_state_of_affairs are both simultaneously true.\n",
-      "[abbrev] Msg\n",
-      "[coreType] Core\n",
-      "[requiresFE] <None>\n",
-      "[excludesFE] <None>\n",
-      "[semType] \n",
-      "  Message(56)\n",
-      "\n",
-      "Conceded_state_of_affairs :  A proposition or set of propositions that the speaker wants the addressee to believe or take for granted. This statement is not asserted, but presupposed by the speaker of the sentence, and is mentioned to contrast with the Main_assertion. It would or could seem to predict a situation different than the Main_assertion, but, for reasons left implicit, this normal prediction is contradicted by the fact that the Main_assertion and the Conceded_state_of_affairs are both simultaneously true. \n",
-      "frame element (13303): Topic\n",
-      "    of Concessive(2150)\n",
-      "[definition]\n",
-      "  An entity which metonymically stands in for an associated\n",
-      "  Statement.  'She got married in spite of him .' 'Despite her ,\n",
-      "  they finished on time .'\n",
-      "[abbrev] Top\n",
-      "[coreType] Core\n",
-      "[requiresFE] <None>\n",
-      "[excludesFE] Conceded_state_of_affairs(13302)\n",
-      "[semType] <None>\n",
-      "\n",
-      "Topic :  An entity which metonymically stands in for an associated Statement.  'She got married in spite of him .' 'Despite her , they finished on time .'\n",
-      "frame element (13312): Main_assertion\n",
-      "    of Concessive(2150)\n",
-      "[definition]\n",
-      "  The statement that the speaker wishes to assert or offer as their\n",
-      "  main contribution to the discourse, which is be modified or\n",
-      "  hedged in some way by the Conceded_state_of_affairs. The force of\n",
-      "  the contribution of the Main_assertion is presented as undiluted\n",
-      "  by the fact that something different from the Main_assertion\n",
-      "  would normally by predicted, based on the facts in the\n",
-      "  Conceded_state_of_affairs.\n",
-      "[abbrev] \n",
-      "[coreType] Core\n",
-      "[requiresFE] <None>\n",
-      "[excludesFE] <None>\n",
-      "[semType] <None>\n",
-      "\n",
-      "Main_assertion :  The statement that the speaker wishes to assert or offer as their main contribution to the discourse, which is be modified or hedged in some way by the Conceded_state_of_affairs. The force of the contribution of the Main_assertion is presented as undiluted by the fact that something different from the Main_assertion would normally by predicted, based on the facts in the Conceded_state_of_affairs. \n",
+      "Topic :  The Topic is the subject about which the history is given.  'The role of the Byzantine Empire in European history is not understood by all.'  \n",
+      "Domain :  The Domain is (a characterization of) the type of event that is to be included in consideration of the Topic's history.  'Elizabethan Stage remain classics of literary history.'  \n",
+      "End_time :  The end of the span of time during which the Topic occurs. \n",
+      "Start_time :  The beginning of the time span over which the Topic occurs.  \n",
+      "Time_span :  The span of time over which the events related to the Topic take place.  \n",
+      "Duration :  The Duration, often expressed in calendric units, of the history of the Topic.  \n",
+      "Time :  When the events concerning the Topic occured.\n",
       "\n",
       "\n",
-      "despite.prep :  FN: in spite of\n",
-      "in spite of.prep :  FN: in spite of \n",
-      "though.scon :  in spite of the fact that\n",
-      "although.scon :  FN: in spite of the fact that\n",
-      "while.scon :  when on the other hand\n",
-      "if.scon :  FN: with the assumption that there is a possibility that\n",
-      "much as.scon :  FN: (usually with verbs of cognition or volition, esp. \"much as I'd like...\") although.\n"
+      "history.n :  FN: the sum of events associated with a given topic\n"
      ]
     }
    ],
@@ -105,7 +57,7 @@
     "from nltk.corpus import framenet as fn\n",
     "from nltk.corpus import wordnet as wn\n",
     "\n",
-    "frame = fn.frame_by_name('Concessive')\n",
+    "frame = fn.frame_by_name('History')\n",
     "\n",
     "print('definizione frame:', frame.definition)\n",
     "print('\\n')\n",
@@ -120,27 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "lexical unit (256): foresee.v\n\n[definition]\n  COD: be aware of beforehand; predict.\n\n[frame] Expectation(26)\n\n[POS] V\n\n[status] FN1_Sent\n\n[lexemes] foresee/V\n\n[semTypes] 0 semantic types\n\n[URL] https://framenet2.icsi.berkeley.edu/fnReports/data/lu/lu256.xml\n\n[subCorpus] 25 subcorpora\n  V-420-that-sfin, V-430-sfin, V-480-swh, V-570-np-ppfor,\n  V-570-np-ppfrom, V-570-np-ppin, V-570-np-ppon, V-570-np-\n  ppwith, V-620-np-ppother, V-650-np-pother, V-660-trans-\n  simple, V-670-pass-by, V-680-pass, V-690-trans-other,\n  V-730-ppat, V-730-ppfor, V-730-ppfrom, V-730-ppin,\n  V-730-ppon, V-730-ppwith, V-780-ppother, V-810-pother,\n  V-890-intrans-adverb, V-900-other, manually-added\n\n[exemplars] 45 sentences across all subcorpora"
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fn.lu(256)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -149,14 +81,33 @@
      "text": [
       "\n",
       "\n",
-      "Synset('deed.n.01')\n",
-      "definition: a legal document signed and sealed and delivered to effect a transfer of property and to show the legal right to possess it\n",
-      "he signed the deed\n",
-      "he kept the title to his car in the glove compartment\n",
+      "Synset('history.n.01')\n",
+      "definition: the aggregate of past events\n",
+      "a critical time in the school's history\n",
       "\n",
       "\n",
-      "Synset('act.n.02')\n",
-      "definition: something that people do or cause to happen\n",
+      "Synset('history.n.02')\n",
+      "definition: a record or narrative description of past events\n",
+      "a history of France\n",
+      "he gave an inaccurate account of the plot to kill the president\n",
+      "the story of exposure to lead\n",
+      "\n",
+      "\n",
+      "Synset('history.n.03')\n",
+      "definition: the discipline that records and interprets past events involving human beings\n",
+      "he teaches Medieval history\n",
+      "history takes the long view\n",
+      "\n",
+      "\n",
+      "Synset('history.n.04')\n",
+      "definition: the continuum of events occurring in succession leading from the past to the present and even into the future\n",
+      "all of human history\n",
+      "\n",
+      "\n",
+      "Synset('history.n.05')\n",
+      "definition: all that is remembered of the past as preserved in writing; a body of knowledge\n",
+      "the dawn of recorded history\n",
+      "from the beginning of history\n",
       "\n",
       "\n"
      ]
@@ -164,7 +115,7 @@
    ],
    "source": [
     "print('\\n')\n",
-    "for syn in wn.synsets('deed'):\n",
+    "for syn in wn.synsets('history'):\n",
     "    print(syn)\n",
     "    print('definition:' , syn.definition())\n",
     "    #print example\n",
