--- a/Esercizio 2/mapping_FN_WN.ipynb
+++ b/Esercizio 2/mapping_FN_WN.ipynb
@@ -14,11 +14,11 @@
    "metadata": {},
    "source": [
     "Frame OLIVERio:\n",
-    "[ ] Concessive\n",
-    "[ ] History\n",
-    "[ ] Change_resistance\n",
-    "[ ] Emptying\n",
-    "[ ] Performers_and_roles\n",
+    "[x] Concessive\n",
+    "[x] History\n",
+    "[x] Change_resistance\n",
+    "[x] Emptying\n",
+    "[x] Performers_and_roles\n",
     "\n",
     "Frame TOMATIS\n",
     "[x] Deciding\n",
@@ -30,26 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "definizione frame: A recordable sequence of events is associated with a given Topic.   'And that is where the history of art begins.' \n",
+      "definizione frame: A Performer has a certain Role in a Performance and plays their part by following the directions in the Script for that particular Role.   'Margaret Thatcher played Juliet in a school play.' '\"Pulp Fiction\" starred John Travolta and a lot of other big names.' 'Mel Gibson starred in \"Braveheart\" as the leader of a Scottish rebellion.' 'I play the character of Yusuf in this film.'\n",
       "\n",
       "\n",
-      "Topic :  The Topic is the subject about which the history is given.  'The role of the Byzantine Empire in European history is not understood by all.'  \n",
-      "Domain :  The Domain is (a characterization of) the type of event that is to be included in consideration of the Topic's history.  'Elizabethan Stage remain classics of literary history.'  \n",
-      "End_time :  The end of the span of time during which the Topic occurs. \n",
-      "Start_time :  The beginning of the time span over which the Topic occurs.  \n",
-      "Time_span :  The span of time over which the events related to the Topic take place.  \n",
-      "Duration :  The Duration, often expressed in calendric units, of the history of the Topic.  \n",
-      "Time :  When the events concerning the Topic occured.\n",
       "\n",
       "\n",
-      "history.n :  FN: the sum of events associated with a given topic\n"
+      "star.v :  COD: have (someone) as a principal performer. \n",
+      "act.v :  COD: perform a fictional role in a play or film. \n",
+      "play.v :  COD: . represent (a character) in a play or film\n",
+      "be.v :  FN: perform in the role of\n",
+      "star.n :  FN: an important performer\n",
+      "co-star.n :  COD: a performer appearing with another or others of equal importance. \n",
+      "co-star (in).v :  COD:  appear in a production as a co-star.\n",
+      "lead.n :  COD: the chief part in a play or film. \n",
+      "star (in).v :  COD: have a principal role in a film, play, etc. \n",
+      "as.prep :  FN: playing in the role of\n",
+      "co-star.v :  COD: include as a co-star. \n",
+      "feature.v :  COD: have as an important actor or participant. \n",
+      "character.n :  COD: a part played by an actor.\n",
+      "role.n :  COD: an actor's part in a play, film, etc.\n",
+      "part.n :  COD: a role played by an actor or actress.\n",
+      "appear.v :  FN: to perform in a play or film \n"
      ]
     }
    ],
@@ -57,13 +65,13 @@
     "from nltk.corpus import framenet as fn\n",
     "from nltk.corpus import wordnet as wn\n",
     "\n",
-    "frame = fn.frame_by_name('History')\n",
+    "frame = fn.frame_by_name('Performers_and_roles')\n",
     "\n",
     "print('definizione frame:', frame.definition)\n",
     "print('\\n')\n",
     "\n",
-    "for fe in frame.FE:\n",
-    "    print(fe, ': ', frame.FE[fe].definition)\n",
+    "#for fe in frame.FE:\n",
+    "#    print(fe, ': ', frame.FE[fe].definition)\n",
     "\n",
     "print('\\n')\n",
     "for lu in frame.lexUnit:\n",
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,33 +89,161 @@
      "text": [
       "\n",
       "\n",
-      "Synset('history.n.01')\n",
-      "definition: the aggregate of past events\n",
-      "a critical time in the school's history\n",
+      "Synset('lead.n.01')\n",
+      "definition: an advantage held by a competitor in a race\n",
+      "he took the lead at the last turn\n",
       "\n",
       "\n",
-      "Synset('history.n.02')\n",
-      "definition: a record or narrative description of past events\n",
-      "a history of France\n",
-      "he gave an inaccurate account of the plot to kill the president\n",
-      "the story of exposure to lead\n",
+      "Synset('lead.n.02')\n",
+      "definition: a soft heavy toxic malleable metallic element; bluish white when freshly cut but tarnishes readily to dull grey\n",
+      "the children were playing with lead soldiers\n",
       "\n",
       "\n",
-      "Synset('history.n.03')\n",
-      "definition: the discipline that records and interprets past events involving human beings\n",
-      "he teaches Medieval history\n",
-      "history takes the long view\n",
+      "Synset('lead.n.03')\n",
+      "definition: evidence pointing to a possible solution\n",
+      "the police are following a promising lead\n",
+      "the trail led straight to the perpetrator\n",
       "\n",
       "\n",
-      "Synset('history.n.04')\n",
-      "definition: the continuum of events occurring in succession leading from the past to the present and even into the future\n",
-      "all of human history\n",
+      "Synset('lead.n.04')\n",
+      "definition: a position of leadership (especially in the phrase `take the lead')\n",
+      "he takes the lead in any group\n",
+      "we were just waiting for someone to take the lead\n",
+      "they didn't follow our lead\n",
       "\n",
       "\n",
-      "Synset('history.n.05')\n",
-      "definition: all that is remembered of the past as preserved in writing; a body of knowledge\n",
-      "the dawn of recorded history\n",
-      "from the beginning of history\n",
+      "Synset('lead.n.05')\n",
+      "definition: the angle between the direction a gun is aimed and the position of a moving target (correcting for the flight time of the missile)\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.06')\n",
+      "definition: the introductory section of a story\n",
+      "it was an amusing lead-in to a very serious matter\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.07')\n",
+      "definition: (sports) the score by which a team or individual is winning\n",
+      "\n",
+      "\n",
+      "Synset('star.n.04')\n",
+      "definition: an actor who plays a principal role\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.09')\n",
+      "definition: (baseball) the position taken by a base runner preparing to advance to the next base\n",
+      "he took a long lead off first\n",
+      "\n",
+      "\n",
+      "Synset('tip.n.03')\n",
+      "definition: an indication of potential opportunity\n",
+      "he got a tip on the stock market\n",
+      "a good lead for a job\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.11')\n",
+      "definition: a news story of major importance\n",
+      "\n",
+      "\n",
+      "Synset('spark_advance.n.01')\n",
+      "definition: the timing of ignition relative to the position of the piston in an internal-combustion engine\n",
+      "\n",
+      "\n",
+      "Synset('leash.n.01')\n",
+      "definition: restraint consisting of a rope (or light chain) used to restrain an animal\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.14')\n",
+      "definition: thin strip of metal used to separate lines of type in printing\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.15')\n",
+      "definition: mixture of graphite with clay in different degrees of hardness; the marking substance in a pencil\n",
+      "\n",
+      "\n",
+      "Synset('jumper_cable.n.01')\n",
+      "definition: a jumper that consists of a short piece of wire\n",
+      "it was a tangle of jumper cables and clip leads\n",
+      "\n",
+      "\n",
+      "Synset('lead.n.17')\n",
+      "definition: the playing of a card to start a trick in bridge\n",
+      "the lead was in the dummy\n",
+      "\n",
+      "\n",
+      "Synset('lead.v.01')\n",
+      "definition: take somebody somewhere\n",
+      "We lead him to our chief\n",
+      "can you take me to the main entrance?\n",
+      "He conducted us to the palace\n",
+      "\n",
+      "\n",
+      "Synset('leave.v.07')\n",
+      "definition: have as a result or residue\n",
+      "The water left a mark on the silk dress\n",
+      "Her blood left a stain on the napkin\n",
+      "\n",
+      "\n",
+      "Synset('lead.v.03')\n",
+      "definition: tend to or result in\n",
+      "This remark lead to further arguments among the guests\n",
+      "\n",
+      "\n",
+      "Synset('lead.v.04')\n",
+      "definition: travel in front of; go in advance of others\n",
+      "The procession was headed by John\n",
+      "\n",
+      "\n",
+      "Synset('lead.v.05')\n",
+      "definition: cause to undertake a certain action\n",
+      "Her greed led her to forge the checks\n",
+      "\n",
+      "\n",
+      "Synset('run.v.03')\n",
+      "definition: stretch out over a distance, space, time, or scope; run or extend between two points or beyond a certain point\n",
+      "Service runs all the way to Cranbury\n",
+      "His knowledge doesn't go very far\n",
+      "My memory extends back to my fourth year of life\n",
+      "The facts extend beyond a consideration of her personal assets\n",
+      "\n",
+      "\n",
+      "Synset('head.v.02')\n",
+      "definition: be in charge of\n",
+      "Who is heading this project?\n",
+      "\n",
+      "\n",
+      "Synset('lead.v.08')\n",
+      "definition: be ahead of others; be the first\n",
+      "she topped her class every year\n",
+      "\n",
+      "\n",
+      "Synset('contribute.v.03')\n",
+      "definition: be conducive to\n",
+      "The use of computers in the classroom lead to better writing\n",
+      "\n",
+      "\n",
+      "Synset('conduct.v.02')\n",
+      "definition: lead, as in the performance of a composition\n",
+      "conduct an orchestra; Barenboim conducted the Chicago symphony for years\n",
+      "\n",
+      "\n",
+      "Synset('go.v.25')\n",
+      "definition: lead, extend, or afford access\n",
+      "This door goes to the basement\n",
+      "The road runs South\n",
+      "\n",
+      "\n",
+      "Synset('precede.v.04')\n",
+      "definition: move ahead (of others) in time or space\n",
+      "\n",
+      "\n",
+      "Synset('run.v.23')\n",
+      "definition: cause something to pass or lead somewhere\n",
+      "Run the wire behind the cabinet\n",
+      "\n",
+      "\n",
+      "Synset('moderate.v.01')\n",
+      "definition: preside over\n",
+      "John moderated the discussion\n",
       "\n",
       "\n"
      ]
@@ -115,7 +251,7 @@
    ],
    "source": [
     "print('\\n')\n",
-    "for syn in wn.synsets('history'):\n",
+    "for syn in wn.synsets('lead'):\n",
     "    print(syn)\n",
     "    print('definition:' , syn.definition())\n",
     "    #print example\n",
