--- a/Esercizio 2/mapping_FN_WN.ipynb
+++ b/Esercizio 2/mapping_FN_WN.ipynb
@@ -70,8 +70,8 @@
     "print('definizione frame:', frame.definition)\n",
     "print('\\n')\n",
     "\n",
-    "#for fe in frame.FE:\n",
-    "#    print(fe, ': ', frame.FE[fe].definition)\n",
+    "for fe in frame.FE:\n",
+    "    print(fe, ': ', frame.FE[fe].definition)\n",
     "\n",
     "print('\\n')\n",
     "for lu in frame.lexUnit:\n",
